# acs-firmware

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/aesir/skoll/: Kconfig.defconfig  Kconfig.skoll  board.yml  skoll.dts  skoll.dtsi  skoll.yaml
boards/arm/skoll/: Kconfig.skoll  board.cmake  skoll_defconfig
ext/modules/icm20948/: CMakeLists.txt  Kconfig
ext/modules/icm20948/drivers/sensor/tdk/icm20948/: icm20948.c  icm20948.h  icm20948_i2c.c  icm20948_trig.c
modules/icm20948/drivers/: Kconfig
modules/icm20948/drivers/sensor/tdk/: CMakeLists.txt  Kconfig
modules/icm20948/drivers/sensor/tdk/icm20948/: CMakeLists.txt  Kconfig
modules/icm20948/dts/bindings/sensor/: invensense,icm20948.yaml
modules/icm20948/zephyr/: module.yml
src/: main.c
